# Cubica

./: CMakeLists.txt  Makefile
include/glad/: glad.h
shaders/: ui.frag  ui.vert  voxel.frag  voxel.vert
src/: block.h  chunk.cpp  chunk.h  font.cpp  font.h  glad.c  inventory.cpp  inventory.h  main.cpp  math.h  menu.cpp  menu.h  mesh.cpp  mesh.h  net_client.cpp  net_client.h  net_server.cpp  net_server.h  noise.h  player.cpp  player.h  player_renderer.cpp  player_renderer.h  resourcepack.cpp  resourcepack.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_dtor.cpp  ui.cpp  ui.h  world.cpp  world.h
